# synthetic_math_prompts_agent

./: .gitignore  IMPLEMENTATION_SUMMARY.md  README.md  README_ENHANCED.md  allowed_people.txt  pyproject.toml  requirements.txt  setup.py  system_messages.py
app/: README.md  config.py  main.py
app/api/: __init__.py  batches.py  generation.py  problems.py  routes.py
app/models/: __init__.py  database.py  models.py  schemas.py
app/services/: __init__.py  batch_service.py  bigquery_service.py  pipeline_service.py  problem_service.py
checker/: validate_prompt.py
cli/: interface.py  run_interactive.py
config/: settings.yaml
core/: README.md  agents.py  runner.py
core/checker/: cas_validator.py  validate_prompt.py
database/: math_agent.db
docs/: backend_README.md  backend_optimization_plan.md  core_README.md  enhancement_plan.md  overview.md
engineer/: generate_prompt.py
orchestration/: evaluate_target_model.py  generate_batch.py  save_results.py
scripts/: cache_manager.py
taxonomy/: enhanced_math_taxonomy.json  math_taxonomy.json  sample_math_taxonomy.json
tests/: conftest.py  test_generation_enhancements.py  test_performance_enhancements.py
utils/: README.md  __init__.py  benchmark_seed.py  config_loader.py  config_manager.py  cost_estimation.py  costs.py  curriculum_strategy.py  domain_taxonomy.json  exceptions.py  google_auth.py  helpers.py  json_utils.py  logging_config.py  performance_monitor.py  prompt_examples.py  save_results.py  similarity_utils.py  system_messages.py  taxonomy.py  topic_classifier.py  validation.py
(+33 files in other folders)
